Cleaned up a few lines